--- a/css/style.styl
+++ b/css/style.styl
@@ -10,10 +10,11 @@ body
     border-radius 20px
 
 .tarjeta
-    box-shadow: 10px 20px 5px #727171;
+    box-shadow: 2px -12px 94px -9px rgba(138,138,138,1);
     position relative
     border-radius 20px
     margin-top 40px
+    margin-bottom 40px
     background-color:#fff
     padding 20px
 
@@ -28,7 +29,7 @@ body
     background-color #7D68E9
     border-top-right-radius 20px
     border-bottom-right-radius 20px
-    box-shadow  46px 42px 76px 5px rgba(54,53,54,1)
+    box-shadow  20px 42px 76px 5px rgba(54,53,54,1)
 
 .icon
     background-color #31338A
@@ -62,15 +63,22 @@ body
     text-align center
     display flex
     align-items center
+    font-size 5px
     background-color #7D68E9
     border-radius 20px
+    color #fff
+    justify-content center
+
+.temp-item h6
+    font-size 12px
+
 .img-place
     border-radius 20px
     background-image url('../img/place.jpg')
     height 200px
     color #fff
     padding 10px
-    
+    box-shadow 13px 52px 123px -7px rgba(138,138,138,1)
     background-repeat no-repeat
     background-size cover
 .ciudades1
@@ -100,3 +108,25 @@ body
     border-top-right-radius 20px
     display flex
     align-items center
+
+
+
+
+    // ---------------aliado
+
+.tarjeta-aliado
+    box-shadow -1px -1px 63px -2px rgba(168,165,168,1)
+    border-radius 20px
+
+
+.icon-aliado
+    background-color #7D68E9
+    border-radius 20px
+    margin-left 10px
+
+.temp-aliado
+    display flex
+    align-items center
+    border-right 1px solid gray
+
+
