--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@ body {
   border-radius: 20px;
 }
 .tarjeta {
-  box-shadow: 10px 20px 5px #727171;
+  box-shadow: 2px -12px 94px -9px #8a8a8a;
   position: relative;
   border-radius: 20px;
   margin-top: 40px;
+  margin-bottom: 40px;
   background-color: #fff;
   padding: 20px;
 }
@@ -28,7 +29,7 @@ body {
   background-color: #7d68e9;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
-  box-shadow: 46px 42px 76px 5px #363536;
+  box-shadow: 20px 42px 76px 5px #363536;
 }
 .icon {
   background-color: #31338a;
@@ -59,8 +60,14 @@ body {
   text-align: center;
   display: flex;
   align-items: center;
+  font-size: 5px;
   background-color: #7d68e9;
   border-radius: 20px;
+  color: #fff;
+  justify-content: center;
+}
+.temp-item h6 {
+  font-size: 12px;
 }
 .img-place {
   border-radius: 20px;
@@ -68,6 +75,7 @@ body {
   height: 200px;
   color: #fff;
   padding: 10px;
+  box-shadow: 13px 52px 123px -7px #8a8a8a;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -99,4 +107,18 @@ body {
   border-top-right-radius: 20px;
   display: flex;
   align-items: center;
+}
+.tarjeta-aliado {
+  box-shadow: -1px -1px 63px -2px #a8a5a8;
+  border-radius: 20px;
+}
+.icon-aliado {
+  background-color: #7d68e9;
+  border-radius: 20px;
+  margin-left: 10px;
+}
+.temp-aliado {
+  display: flex;
+  align-items: center;
+  border-right: 1px solid #808080;
 }
