--- a/css/style.styl
+++ b/css/style.styl
@@ -120,6 +120,8 @@ body
 
 
 .icon-aliado
+    display flex
+    align-items center
     background-color #7D68E9
     border-radius 20px
     margin-left 10px
@@ -129,4 +131,22 @@ body
     align-items center
     border-right 1px solid gray
 
+
+.tarjeta-location
+    // display flex
+    align-items center
+    margin-top 10px
+    height 150px
+    padding-top 30px
+    border-radius 20px
+    border 2px  dotted gray
+    box-shadow -1px -1px 63px -2px rgba(168,165,168,1)
+
+.btn-add
+    border-radius 20px
+    text-align center
+
+.trazo
+    background-image url('../img/trazo.jpg')
+    height 80px
 
