--- a/css/style.styl
+++ b/css/style.styl
@@ -117,6 +117,7 @@ body
 .tarjeta-aliado
     box-shadow -1px -1px 63px -2px rgba(168,165,168,1)
     border-radius 20px
+    background-color #fff
 
 
 .icon-aliado
@@ -149,4 +150,9 @@ body
 .trazo
     background-image url('../img/trazo.jpg')
     height 80px
+
+
+.loc 
+    right 5px
+    bottom 20px
 
